# FormulaOne

./: README.md  pyproject.toml
local/: local_run_grid_search_training.py  local_run_training.py
local/data_analysis/: local_feature_analysis.py  local_run_tsne.py
src/: constants.py
src/data/: data_config.py  dataset.py  preprocessing.py
src/data/analysis/: features.py  tsne.py
src/model/: entrypoint.py  model_types.py  shap_driver.py
src/model/grid_search/: entrypoint.py  grid_search_config.py  grid_search_driver.py
tests/: test_constants.py
tests/data/: test_dataset.py
