[tool.poetry]
name = "formulaone"
version = "0.1.0"
description = ""
authors = ["Jackson Lewis"]
readme = "README.md"
packages = [{include = "src"}]

[tool.pytest.ini_options]
pythonpath = ["src"]
testspath = ["tests"]

[tool.poetry.dependencies]
python = "^3.10"
lightgbm = "^4.5.0"
matplotlib = "3.9.0"
numpy = "^2.0.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
shap = "^0.46.0"
xgboost = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "~7.3.0"
pre-commit = "^3.7.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
